--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context="com.zoonapps.stepscountapp.RegistrationActivity">
+    tools:context="com.zoonapps.stepscountapp.Activities.RegistrationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
