--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/logout"
-        app:showAsAction="always"
-        android:title="logout"/>
+        app:showAsAction="never"
+        android:title="تسجيل الخروج"/>
 </menu>
