back4app working

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
         <EditText
             android:id="@+id/usernameET"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_above="@+id/progressBar"
             android:layout_alignParentEnd="true"
             android:background="@drawable/shape1"
@@ -41,7 +41,7 @@
         <EditText
             android:id="@+id/passwordET"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:layout_alignParentEnd="true"
             android:layout_alignStart="@+id/usernameET"
