--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -37,7 +37,7 @@
         android:layout_alignParentEnd="true"
         android:text="0"
         android:textSize="50dp"
-        android:layout_alignTop="@+id/moeny_img" />
+        android:layout_alignTop="@+id/money_img" />
 
     <ImageView
         android:id="@+id/steps_img"
@@ -48,13 +48,13 @@
         android:layout_alignParentStart="true" />
 
     <ImageView
-        android:id="@+id/moeny_img"
+        android:id="@+id/money_img"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:srcCompat="@drawable/moenyicon"
-        android:layout_below="@+id/steps_label"
+        android:layout_below="@+id/view"
         android:layout_alignStart="@+id/steps_label"
-        android:layout_marginTop="43dp" />
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/steps_label"
@@ -70,11 +70,20 @@
         android:id="@+id/money_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/moeny_img"
-        android:layout_alignStart="@+id/moeny_img"
-        android:layout_below="@+id/moeny_img"
+        android:layout_alignEnd="@+id/money_img"
+        android:layout_alignStart="@+id/money_img"
+        android:layout_below="@+id/money_img"
         android:gravity="center"
         android:text="الارباح" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_height="0.5dp"
+        android:layout_below="@+id/steps_label"
+        android:background="#c0c0c0" />
 
     <ProgressBar
         android:id="@+id/progressBar"
