--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,13 +10,19 @@
             android:id="@+id/nav_menu2"
             android:icon="@drawable/ic_person_black_24dp"
             android:title="حسابي" />
+
         <item
             android:id="@+id/nav_menu3"
+            android:icon="@drawable/ic_monetization_on_black_24dp"
+            android:title="تحويل الارباح الى حسابك" />
+
+        <item
+            android:id="@+id/nav_menu4"
             android:icon="@drawable/ic_share_black_24dp"
             android:title="مشاركة التطبيق" />
 
         <item
-            android:id="@+id/nav_menu4"
+            android:id="@+id/nav_menu5"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="تسجيل الخروج" />
 
