--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -42,17 +42,88 @@
             android:layout_gravity="center_horizontal" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/et1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/transType"
-            android:layout_marginBottom="16dp"
             android:layout_alignStart="@+id/totalEarningTV"
+            android:layout_below="@+id/transType"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/shape2"
+            android:background="@drawable/shape3"
             android:gravity="center"
-            android:inputType="textPersonName"
-            android:text="" />
+            android:visibility="gone"
+            android:inputType="textPersonName"/>
+
+        <EditText
+            android:id="@+id/et2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/et1"
+            android:layout_below="@+id/et1"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/shape3"
+            android:gravity="center"
+            android:visibility="gone"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/et3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/et2"
+            android:layout_below="@+id/et2"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/shape3"
+            android:gravity="center"
+            android:visibility="gone"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/et4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/et3"
+            android:layout_below="@+id/et3"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/shape3"
+            android:gravity="center"
+            android:visibility="gone"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/et5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/et4"
+            android:layout_below="@+id/et4"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/shape3"
+            android:gravity="center"
+            android:visibility="gone"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/et6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/et5"
+            android:layout_below="@+id/et5"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/shape3"
+            android:gravity="center"
+            android:visibility="gone"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/et7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/et6"
+            android:layout_below="@+id/et6"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/shape3"
+            android:gravity="center"
+            android:visibility="gone"
+            android:inputType="textPersonName" />
 
 
         <ProgressBar
