--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingRight="25dp"
@@ -17,6 +19,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
+        android:theme="@style/AppTheme.Button"
         android:text="بدأ" />
 
     <TextView
@@ -26,7 +29,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:text="0"
-        android:textSize="50dp"
+        android:textSize="42dp"
         android:layout_alignBottom="@+id/steps_label" />
 
     <TextView
@@ -36,7 +39,7 @@
         android:layout_alignBottom="@+id/money_label"
         android:layout_alignParentEnd="true"
         android:text="0"
-        android:textSize="50dp"
+        android:textSize="42dp"
         android:layout_alignTop="@+id/money_img" />
 
     <ImageView
@@ -101,4 +104,15 @@
         android:visibility="invisible"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_home_footer">
+    </com.google.android.gms.ads.AdView>
+
 </RelativeLayout>
