--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -55,6 +55,20 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/phoneET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="phone"
+            android:background="@drawable/shape2"
+            android:textSize="16sp"
+            android:hint="رقم الجوال"
+            android:gravity="center"
+            android:drawableRight="@drawable/ic_local_phone_black_24dp"
+            android:layout_below="@+id/passwordET"
+            android:layout_alignStart="@+id/passwordET"
+            android:layout_weight="0.25" />
+
+        <EditText
             android:id="@+id/emailET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,8 +78,8 @@
             android:hint="الايميل"
             android:gravity="center"
             android:drawableRight="@drawable/email_icon"
-            android:layout_below="@+id/passwordET"
-            android:layout_alignStart="@+id/passwordET"
+            android:layout_below="@+id/phoneET"
+            android:layout_alignStart="@+id/phoneET"
             android:layout_weight="0.25" />
 
         <Button
