--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,11 @@
 
         <item
             android:id="@+id/nav_menu5"
+            android:icon="@drawable/ic_feedback_black_24dp"
+            android:title="تواصل معنا" />
+
+        <item
+            android:id="@+id/nav_menu6"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="تسجيل الخروج" />
 
